--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,15 @@ value.random=${random.value}
 user.email=test@mail.com
 user.password=1234
 user.age=25
+
+spring.jpa.show-sql=true
+
+logging.level.root=debug
+logging.level.org.springframework.web=info
+logging.level.org.hibernate=error
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.userName=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.h2Dialect
